Prevent shifting with multiline code explanations

--- a/assets/scss/iggg.scss
+++ b/assets/scss/iggg.scss
@@ -79,6 +79,7 @@ main.page-iggg {
   }
 
   #location-code-explanation {
+    min-height: 4.2em;
     margin-top: 0.4em;
     font-size: 0.9em;
     text-align: center;
